# AIEngineering

./: README.md  SPEC.md  ai-engineering-masterclass.html  pyproject.toml  requirements.txt  setup.sh
python-examples/: README.md
python-examples/Track10_MLOps/: 10_1_deployment.py
python-examples/Track11_Hardware/: 11_1_gpu_optimization.py
python-examples/Track12_Frontier/: 12_1_frontier.py
python-examples/Track1_Foundations/: 1_1_math_basics.py  1_2_python_basics.py  1_3_data_engineering.py
python-examples/Track2_Classical_ML/: 2_1_ml_basics.py  2_5_sklearn_pipeline.py
python-examples/Track3_Deep_Learning/: 3_1_nn_from_scratch.py  3_1_nn_simple.py
python-examples/Track4_Transformers/: 4_1_attention.py  4_1_attention_simple.py
python-examples/Track5_LLM_Ecosystem/: 5_1_api_calls.py  5_1_llm_basics.py
python-examples/Track6_Prompt_Engineering/: 6_1_prompt_patterns.py
python-examples/Track7_RAG/: 7_1_rag_basics.py  7_3_rag_pipeline.py
python-examples/Track8_Fine_Tuning/: 8_1_lora.py
python-examples/Track9_Agents/: 9_1_agent_basics.py  9_2_langgraph.py
