[project]
name = "ai-engineering-masterclass"
version = "1.0.0"
description = "Complete AI Engineering Masterclass with Python examples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # Transformers
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    # LLM Providers
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    # LangChain & Agents
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.0.20",
    # Embeddings & RAG
    "sentence-transformers>=2.3.0",
    "chromadb>=0.4.0",
    "langchain-community>=0.0.20",
    # Fine-tuning
    "peft>=0.8.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.25.0",
    "trl>=0.7.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# Minimal install for beginners
beginner = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]

# With LLM support
llm = [
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
]

# Full installation
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
